{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 1314,
  "lineage": "2465af5a-5ade-cd9b-6495-2097f280fed1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014620044081:vpc/vpc-e04a1a98",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a96887c4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-aa6f26d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-e04a1a98",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a96f52d2",
            "owner_id": "014620044081",
            "state": "available",
            "tags": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:014620044081:loadbalancer/app/ecs-terraform-alb/96215f94c56eb467",
            "arn_suffix": "app/ecs-terraform-alb/96215f94c56eb467",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-terraform-alb-312493353.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:014620044081:loadbalancer/app/ecs-terraform-alb/96215f94c56eb467",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-terraform-alb",
            "security_groups": [
              "sg-02bd1f40c55c04aae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-835de1de"
              },
              {
                "subnet_id": "subnet-86bc88ad"
              },
              {
                "subnet_id": "subnet-af4986e5"
              },
              {
                "subnet_id": "subnet-c0d974b8"
              }
            ],
            "subnets": [
              "subnet-835de1de",
              "subnet-86bc88ad",
              "subnet-af4986e5",
              "subnet-c0d974b8"
            ],
            "tags": {
              "Application": "ecs-terraform-app",
              "Environment": "staging"
            },
            "tags_all": {
              "Application": "ecs-terraform-app",
              "Environment": "staging"
            },
            "vpc_id": "vpc-e04a1a98",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:014620044081:listener/app/ecs-terraform-alb/96215f94c56eb467/416a91764dbd998f",
            "certificate_arn": "arn:aws:acm:us-west-2:014620044081:certificate/d82c0216-3d36-4273-95a4-0d718d682360",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:014620044081:targetgroup/ecs-terraform-alb-tg/07d8b1dc4ea7f24c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:014620044081:listener/app/ecs-terraform-alb/96215f94c56eb467/416a91764dbd998f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:014620044081:loadbalancer/app/ecs-terraform-alb/96215f94c56eb467",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.this",
            "aws_lb.staging",
            "aws_lb_target_group.staging",
            "aws_security_group.lb",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:014620044081:targetgroup/ecs-terraform-alb-tg/07d8b1dc4ea7f24c",
            "arn_suffix": "targetgroup/ecs-terraform-alb-tg/07d8b1dc4ea7f24c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 90,
                "matcher": "200-299",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:014620044081:targetgroup/ecs-terraform-alb-tg/07d8b1dc4ea7f24c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-terraform-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-e04a1a98"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014620044081:security-group/sg-00124aaae4dd15558",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00124aaae4dd15558",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bd1f40c55c04aae"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-terraform-tasks-sg",
            "name_prefix": "",
            "owner_id": "014620044081",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e04a1a98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014620044081:security-group/sg-02bd1f40c55c04aae",
            "description": "controls access to the Application Load Balancer (ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bd1f40c55c04aae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecs-terraform-lb-sg",
            "name_prefix": "",
            "owner_id": "014620044081",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e04a1a98"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}